# ai-image-slicing

./: .gitignore  README.md  pyproject.toml
src/: blackframe_grid_slicing.py  gray.py  grid_based_slicing.py  projection_based_slicing.py  projection_vertical_slicing_rotatedImg.py  records.json  ss_slice.py  test.py  test_.py
src/data_extraction/: check_model.py  deepseek_img.py  openai_ocr.py  stash.txt
src/data_extraction/deepseek/: deepseek_img.py  deepseek_ocr.py  deepseek_vl_git.py  deepseek_vl_litellm.py  deepseek_vl_lmdeploy.py
src/data_extraction/google/: gemini_models.py
src/data_extraction/grepsr/: check_avail_models.txt  qwen_ocr.py
src/data_extraction/openai/: openai_img.py
src/data_extraction/qwen/: qwen25_vl_hf.py  qwen2_vl_hf.py
src/data_extraction/salesforce/: blip.py
src/item_slicing/: blackframe_grid_slicing.py  coloredframe_grid_slicing.py  grid_based_slicing.py  projection_based_vertical_slicing.py  rotate_grid.py  sequence.py  ss_slice.py  sunildai.py
