[project]
name = "aiscreenshotparsing"
version = "0.1.0"
description = "Slicing listing page into individual items"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
]
